sumo/tests/sumo/errors/network/edge/lane/root__edge__lane__empty22/errors.sumo
Error: Attribute 'shape' in definition of lane '2_1' is empty.
Error: Could not parse shape of lane '2_1'.
 Can not build according edge.
Error: An unknown lane ('2_1') was tried to be set as incoming to junction '3'.
Error: An unknown lane ('2_1') should be set as a follower for lane '1_1'.
Error: Trying to close connections of an unknown lane ('2_1').
Quitting (on error).
